hphp/hack/test/typecheck/enum/bad/trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php
<?hh

enum X: int {
  A = 0;
  B = 1;
}

function f1(X $x): bool {
  return (!$x === X::A);
}

function f2(X $x): bool {
  return ($x === !X::A);
}
